Minor update in the code

--- a/Shopify_intern.ipynb
+++ b/Shopify_intern.ipynb
@@ -938,7 +938,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Given this table, it comes out that there are several rows with anomalous values. In particular the shop with the id:42, inserts many equal values with order_amount of 704000, total_items 2000, at 4 am. This leads me to think that there is a problem in the computer system of this shop"
+    "##### Given this table, it comes out that there are several rows with anomalous values. In particular the shop with the id:42, inserted many equal values with order_amount of 704000, total_items 2000, at 4 am. This leads me to think that there is a problem in the computer system of this shop"
    ]
   },
   {
